force-app/main/default/objects/vlocity_ps__PricingPlanStep__c/fields/vlocity_ps__IsActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>