force-app/main/default/objects/vlocity_ps__PricingPlanStep__c/fields/vlocity_ps__MethodName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MethodName__c</fullName>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>