force-app/main/default/objects/vlocity_ps__PricingPlanStep__c/fields/vlocity_ps__PricingPlanId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__PricingPlanId__c</fullName>
    <label>Pricing Plan</label>
    <referenceTo>vlocity_ps__PricingPlan__c</referenceTo>
    <relationshipLabel>Pricing Plan Steps</relationshipLabel>
    <relationshipName>PricingPlanSteps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>